--- a/webRTC/frontend/package.json
+++ b/webRTC/frontend/package.json
@@ -1,25 +1,31 @@
 {
-  "name": "webrtc-chat",
+  "name": "frontend",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite --host",
     "build": "vite build",
-    "preview": "vite preview --host",
-    "start": "vite --host --force"
+    "lint": "eslint .",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "lucide-react": "^0.473.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.4.2",
+    "@mui/material": "^6.4.2",
+    "axios": "^1.7.9",
+    "openvidu-browser": "^2.31.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "recordrtc": "^5.6.2",
-    "webrtc-adapter": "^9.0.1"
+    "wavefile": "^11.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
+    "@vitejs/plugin-basic-ssl": "^1.2.0",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.17.0",
     "eslint-plugin-react": "^7.37.2",
