--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -18,10 +18,15 @@
     "@tailwindcss/vite": "^4.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0",
+    "react-router-dom": "^7.1.5",
+    "react-share": "^5.2.0",
+    "react-social-icons": "^6.22.0",
     "tailwindcss": "^4.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
+    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
@@ -30,7 +35,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.18",
     "globals": "^15.14.0",
-    "vite": "^6.1.0",
-    "prettier": "^3.4.2"
+    "prettier": "^3.4.2",
+    "vite": "^6.1.0"
   }
 }
