:sparkles: [JIRA-S12P11B106-161, JIRA-S12P11B106-128] Feat: 회원가입 페이지 완성, 로그인 페이지 라우터 일부 수정, ID 찾기 일부 제작 완료

--- a/Frontend/.prettierrc
+++ b/Frontend/.prettierrc
@@ -9,7 +9,21 @@
   "endOfLine": "lf",
   "jsxSingleQuote": false,
   "proseWrap": "preserve",
-  "importOrder": ["^@core/(.*)$", "^@server/(.*)$", "^@ui/(.*)$", "^[./]"],
+  "plugins": ["@trivago/prettier-plugin-sort-imports"],
+  "importOrder": [
+    "^react(-dom)?$",
+    "^react-router(-dom)?$",
+    "^@mui/(.*)$",
+    "^@components/(.*)$",
+    "^@pages/(.*)$",
+    "^@styles/(.*)$",
+    "^@assets/(.*)$",
+    "^[./]components/(.*)$",
+    "^[./]pages/(.*)$",
+    "^[./]styles/(.*)$",
+    "^[./]assets/(.*)$",
+    "^[./]"
+  ],
   "importOrderSeparation": true,
   "importOrderSortSpecifiers": true
 }
