--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+meeting_minutes/
+
 # Created by https://www.toptal.com/developers/gitignore/api/pycharm,vs,django,vuejs
 # Edit at https://www.toptal.com/developers/gitignore?templates=pycharm,vs,django,vuejs
 
