--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -15,7 +15,9 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.3",
     "@mui/material": "^6.4.3",
+    "@mui/x-date-pickers": "^7.26.0",
     "@tailwindcss/vite": "^4.0.3",
+    "dayjs": "^1.11.13",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
