--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -1,28 +1,113 @@
+aiohappyeyeballs==2.4.4
+aiohttp==3.11.11
+aiohttp-retry==2.8.3
+aiosignal==1.3.2
+aiosmtplib==3.0.2
+annotated-types==0.7.0
+anyio==4.8.0
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+asttokens==3.0.0
+attrs==25.1.0
+bcrypt==4.2.1
+beautifulsoup4==4.13.3
+blinker==1.9.0
+cachetools==5.5.1
+certifi==2025.1.31
+cffi==1.17.1
+charset-normalizer==3.4.1
+click==8.1.8
+colorama==0.4.6
+cryptography==44.0.0
+decorator==5.1.1
+dnspython==2.7.0
+ecdsa==0.19.0
+email_validator==2.2.0
+executing==2.2.0
 fastapi==0.115.7
-uvicorn==0.34.0
-SQLAlchemy==2.0.37
-PyMySQL==1.1.1
-passlib==1.7.4
-python-dotenv==1.0.1
-python-jose==3.3.0
 fastapi-mail==1.4.2
-redis==5.2.1
-requests==2.32.3
 fastapi-users==14.0.1
 fastapi-users-db-sqlalchemy==7.0.0
-PyJWT==2.10.1
-pydantic==2.10.6
-pydantic_core==2.27.2
-httpx==0.28.1
-jose==1.0.0
-python-multipart==0.0.20
-twilio==9.4.3
-google-oauth==1.0.1
-Jinja2==3.1.5
-python-dateutil==2.9.0.post0
 fastjsonschema==2.21.1
-email_validator==2.2.0
+filelock==3.17.0
+frozenlist==1.5.0
+fsspec==2025.2.0
+genai==2.1.0
+generativeai==0.0.1
+google==3.0.0
+google-ai-generativelanguage==0.6.15
+google-api-core==2.24.1
+google-api-python-client==2.160.0
+google-auth==2.38.0
+google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.2.1
+google-generativeai==0.8.4
+google-oauth==1.0.1
+googleapis-common-protos==1.66.0
+greenlet==3.1.1
+grpcio==1.70.0
+grpcio-status==1.70.0
 h11==0.14.0
-starlette==0.45.3
+httpcore==1.0.7
+httplib2==0.22.0
+httpx==0.28.1
+huggingface-hub==0.28.1
+idna==3.10
+ipython==8.32.0
 itsdangerous==2.2.0
+jedi==0.19.2
+Jinja2==3.1.5
+jose==1.0.0
+makefun==1.15.6
+MarkupSafe==3.0.2
+matplotlib-inline==0.1.7
+multidict==6.1.0
+oauthlib==3.2.2
+openai==0.27.10
+packaging==24.2
+parso==0.8.4
+passlib==1.7.4
+prompt_toolkit==3.0.50
+propcache==0.2.1
+proto-plus==1.26.0
+protobuf==5.29.3
+pure_eval==0.2.3
+pwdlib==0.2.1
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pycparser==2.22
+pydantic==2.10.6
+pydantic-settings==2.7.1
+pydantic_core==2.27.2
+Pygments==2.19.1
+PyJWT==2.10.1
+PyMySQL==1.1.1
+pyOpenSSL==25.0.0
+pyparsing==3.2.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+python-jose==3.3.0
+python-multipart==0.0.20
 PyYAML==6.0.2
+redis==5.2.1
+regex==2024.11.6
+requests==2.32.3
+requests-oauthlib==2.0.0
+rsa==4.9
+six==1.17.0
+sniffio==1.3.1
+soupsieve==2.6
+SQLAlchemy==2.0.37
+stack-data==0.6.3
+starlette==0.45.3
+tabulate==0.9.0
+tiktoken==0.3.3
+tqdm==4.67.1
+traitlets==5.14.3
+twilio==9.4.3
+typing_extensions==4.12.2
+uritemplate==4.1.1
+urllib3==2.3.0
+uvicorn==0.34.0
+wcwidth==0.2.13
+yarl==1.18.3
