--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -101,7 +101,6 @@ SQLAlchemy==2.0.37
 stack-data==0.6.3
 starlette==0.45.3
 tabulate==0.9.0
-tiktoken==0.3.3
 tqdm==4.67.1
 traitlets==5.14.3
 twilio==9.4.3
@@ -111,3 +110,8 @@ urllib3==2.3.0
 uvicorn==0.34.0
 wcwidth==0.2.13
 yarl==1.18.3
+aiofiles==24.1.0
+audioop-lts==0.2.1
+SpeechRecognition==3.14.1
+standard-aifc==3.13.0
+standard-chunk==3.13.0
