--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.3",
+    "@mui/joy": "^5.0.0-beta.51",
     "@mui/material": "^6.4.3",
     "@mui/x-date-pickers": "^7.26.0",
     "@tailwindcss/vite": "^4.0.3",
