🧱 [JIRA-S12P11B106-168] Fix: 환경 변수를 직접 설정하도록 test_ci.sh를 수정정

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,12 +13,32 @@ variables:
   TAG: $CI_COMMIT_REF_NAME
 
 before_script:
+
   - apk add --no-cache docker-compose
   - mkdir -p ~/.ssh
-  - echo "🔑 Downloading Secure Files..."
-  - securefiles download  # ✅ Secure Files 다운로드
-  - mv $CI_PROJECT_DIR/.env .env  # ✅ `.env` 파일 이동
-  - export $(grep -v '^#' .env | xargs)  # ✅ 환경 변수 적용
+  - echo "🔑 Set ENV"
+
+  - echo "DOCKER_USERNAME=$DOCKER_USERNAME" >> .env
+  - echo "DOCKER_PASSWORD=$DOCKER_PASSWORD" >> .env
+  - echo "DEPLOY_SSH_PRIVATE_KEY=$DEPLOY_SSH_PRIVATE_KEY" >> .env
+  - echo "TWILIO_AUTH_TOKEN=$TWILIO_AUTH_TOKEN" >> .env
+  - echo "TWILIO_VERIFY_SID=$TWILIO_VERIFY_SID" >> .env
+  - echo "SECRET_KEY=$SECRET_KEY" >> .env
+  - echo "ALGORITHM=$ALGORITHM" >> .env
+  - echo "ACCESS_TOKEN_EXPIRE_MINUTES=$ACCESS_TOKEN_EXPIRE_MINUTES" >> .env
+  - echo "REFRESH_TOKEN_EXPIRE_DAYS=$REFRESH_TOKEN_EXPIRE_DAYS" >> .env
+  - echo "MAIL_USERNAME=$MAIL_USERNAME" >> .env
+  - echo "MAIL_PASSWORD=$MAIL_PASSWORD" >> .env
+  - echo "MAIL_FROM=$MAIL_FROM" >> .env
+  - echo "MAIL_PORT=$MAIL_PORT" >> .env
+  - echo "MAIL_SERVER=$MAIL_SERVER" >> .env
+  - echo "GOOGLE_CLIENT_ID=$GOOGLE_CLIENT_ID" >> .env
+  - echo "GOOGLE_CLIENT_SECRET=$GOOGLE_CLIENT_SECRET" >> .env
+  - echo "KAKAO_CLIENT_ID=$KAKAO_CLIENT_ID" >> .env
+  - echo "KAKAO_CLIENT_SECRET=$KAKAO_CLIENT_SECRET" >> .env
+  - echo "KAKAO_REDIRECT_URI=$KAKAO_REDIRECT_URI" >> .env
+  - echo "KAKAO_REST_API_KEY=$KAKAO_REST_API_KEY" >> .env
+  - echo "KAKAO_LOGOUT_REDIRECT_URI=$KAKAO_LOGOUT_REDIRECT_URI" >> .env
 
 build_backend:
   stage: build
@@ -52,8 +72,8 @@ test:
 deploy:
   stage: deploy
   script:
-    - chmod 600 $CI_PROJECT_DIR/I12B106T.pem
-    - mv $CI_PROJECT_DIR/I12B106T.pem ~/.ssh/id_rsa
+    - echo "$DEPLOY_SSH_PRIVATE_KEY" > I12B106T.pem
+    - chmod 400 I12B106T.pem
     - ssh -i ~/.ssh/id_rsa ubuntu@i12b106.p.ssafy.io "echo '✅ SSH connection successful'"
     - ssh ubuntu@i12b106.p.ssafy.io << EOF
         set -e
