--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -64,7 +64,6 @@ MarkupSafe==3.0.2
 matplotlib-inline==0.1.7
 multidict==6.1.0
 oauthlib==3.2.2
-openai==0.27.10
 packaging==24.2
 parso==0.8.4
 passlib==1.7.4
@@ -115,3 +114,7 @@ urllib3==2.3.0
 uvicorn==0.34.0
 wcwidth==0.2.13
 yarl==1.18.3
+langchain-community==0.3.17
+langchain-google-genai==2.0.9
+openai==1.59.7
+sentence-transformers==3.3.1
