--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -21,7 +21,10 @@ charset-normalizer==3.4.1
 click==8.1.8
 colorama==0.4.6
 cryptography==44.0.0
+dataclasses-json==0.6.7
 decorator==5.1.1
+diffusers==0.32.2
+distro==1.9.0
 dnspython==2.7.0
 ecdsa==0.19.0
 email_validator==2.2.0
@@ -32,6 +35,7 @@ fastapi-users==14.0.1
 fastapi-users-db-sqlalchemy==7.0.0
 fastjsonschema==2.21.1
 filelock==3.17.0
+filetype==1.2.0
 frozenlist==1.5.0
 fsspec==2025.2.0
 generativeai==0.0.1
@@ -52,18 +56,38 @@ h11==0.14.0
 httpcore==1.0.7
 httplib2==0.22.0
 httpx==0.28.1
+httpx-sse==0.4.0
 huggingface-hub==0.28.1
 idna==3.10
+importlib_metadata==8.6.1
 ipython==8.32.0
 itsdangerous==2.2.0
 jedi==0.19.2
 Jinja2==3.1.5
+jiter==0.8.2
+joblib==1.4.2
 jose==1.0.0
+jsonpatch==1.33
+jsonpointer==3.0.0
+langchain==0.3.18
+langchain-community==0.3.17
+langchain-core==0.3.35
+langchain-google-genai==2.0.9
+langchain-openai==0.3.5
+langchain-text-splitters==0.3.6
+langsmith==0.3.8
 makefun==1.15.6
 MarkupSafe==3.0.2
+marshmallow==3.26.1
 matplotlib-inline==0.1.7
+mpmath==1.3.0
 multidict==6.1.0
+mypy-extensions==1.0.0
+networkx==3.4.2
+numpy==2.2.2
 oauthlib==3.2.2
+openai==1.59.7
+orjson==3.10.15
 packaging==24.2
 parso==0.8.4
 passlib==1.7.4
@@ -94,7 +118,13 @@ redis==5.2.1
 regex==2024.11.6
 requests==2.32.3
 requests-oauthlib==2.0.0
+requests-toolbelt==1.0.0
 rsa==4.9
+safetensors==0.5.2
+scikit-learn==1.6.1
+scipy==1.15.1
+sentence-transformers==3.3.1
+setuptools==75.8.0
 six==1.17.0
 sniffio==1.3.1
 soupsieve==2.6
@@ -104,17 +134,23 @@ stack-data==0.6.3
 standard-aifc==3.13.0
 standard-chunk==3.13.0
 starlette==0.45.3
+sympy==1.13.1
 tabulate==0.9.0
+tenacity==9.0.0
+threadpoolctl==3.5.0
+tiktoken==0.8.0
+tokenizers==0.21.0
+torch==2.6.0
 tqdm==4.67.1
 traitlets==5.14.3
+transformers==4.48.3
 twilio==9.4.3
+typing-inspect==0.9.0
 typing_extensions==4.12.2
 uritemplate==4.1.1
 urllib3==2.3.0
 uvicorn==0.34.0
 wcwidth==0.2.13
 yarl==1.18.3
-langchain-community==0.3.17
-langchain-google-genai==2.0.9
-openai==1.59.7
-sentence-transformers==3.3.1
+zipp==3.21.0
+zstandard==0.23.0
