--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -118,3 +118,7 @@ langchain-community==0.3.17
 langchain-google-genai==2.0.9
 openai==1.59.7
 sentence-transformers==3.3.1
+langchain-community==0.3.17
+langchain-google-genai==2.0.9
+openai==1.59.7
+sentence-transformers==3.3.1
