--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,13 +6,15 @@ stages:
   - deploy
 
 variables:
-  DOCKER_HOST: "unix:///var/run/docker.sock"
+  # DOCKER_HOST: "unix:///var/run/docker.sock"
   DOCKER_AUTH_CONFIG: '{"auths":{"https://index.docker.io/v1/":{"username":"$DOCKER_USERNAME","password":"$DOCKER_PASSWORD"}}}'
   IMAGE_BACKEND: kwon0528/b106-backend
   IMAGE_FRONTEND: kwon0528/b106-frontend
   TAG: $CI_COMMIT_REF_NAME
 
 before_script:
+  - docker info
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
 
   - apk add --no-cache docker-compose
   - mkdir -p ~/.ssh
