--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,15 +1,19 @@
 image: docker:latest
 
+services:
+  - docker:dind  # ✅ Docker-in-Docker 활성화
+
 stages:
   - build
   - test
   - deploy
 
 variables:
-  # DOCKER_HOST: "unix:///var/run/docker.sock"
+  DOCKER_HOST: "tcp://docker:2375"  # ✅ Docker-in-Docker 연결
+  DOCKER_TLS_CERTDIR: ""  # ✅ TLS 인증 비활성화
   DOCKER_AUTH_CONFIG: '{"auths":{"https://index.docker.io/v1/":{"username":"$DOCKER_USERNAME","password":"$DOCKER_PASSWORD"}}}'
-  IMAGE_BACKEND: kwon0528/b106-backend
-  IMAGE_FRONTEND: kwon0528/b106-frontend
+  IMAGE_BACKEND: kwon0528/test-backend
+  IMAGE_FRONTEND: kwon0528/test-frontend
   TAG: $CI_COMMIT_REF_NAME
 
 before_script:
