--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -20,6 +20,7 @@
     "@tailwindcss/vite": "^4.0.3",
     "axios": "^1.7.9",
     "dayjs": "^1.11.13",
+    "dotenv": "^16.4.7",
     "openvidu-browser": "^2.31.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
