--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,10 +1,10 @@
 services:
 
   backend:
-    build:
-      context: ./Backend
-      dockerfile: Dockerfile.dev
-    # image: kwon0528/b106-backend:develop
+    # build:
+    #   context: ./Backend
+    #   dockerfile: Dockerfile.dev
+    image: kwon0528/b106-backend:develop
     container_name: dev-backend
     environment:
       DATABASE_URL: mysql+pymysql://$DB_USER:$DB_PASSWD@$DB_HOST:$DB_PORT/$DB_NAME?charset=utf8
@@ -21,10 +21,10 @@ services:
     restart: unless-stopped
 
   frontend:
-    build:
-      context: ./Frontend
-      dockerfile: Dockerfile.dev
-    # image: kwon0528/b106-frontend:develop
+    # build:
+    #   context: ./Frontend
+    #   dockerfile: Dockerfile.dev
+    image: kwon0528/b106-frontend:develop
     container_name: dev-frontend
     environment:
       - NODE_ENV=development
