🧱 [JIRA-S12P11B106-168] Fix: dind를 사용하지 않는 버전으로 변경경

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,4 @@
-image: docker:latest
-
-services:
-  - docker:dind  # ✅ Docker-in-Docker 활성화
+image: alpine:latest  # 경량화된 기본 이미지 사용
 
 stages:
   - build
@@ -9,14 +6,12 @@ stages:
   - deploy
 
 variables:
-  DOCKER_HOST: "tcp://docker:2375"  # ✅ Docker-in-Docker 연결
-  DOCKER_TLS_CERTDIR: ""  # ✅ TLS 인증 비활성화
-  DOCKER_AUTH_CONFIG: '{"auths":{"https://index.docker.io/v1/":{"username":"$DOCKER_USERNAME","password":"$DOCKER_PASSWORD"}}}'
   IMAGE_BACKEND: kwon0528/test-backend
   IMAGE_FRONTEND: kwon0528/test-frontend
   TAG: $CI_COMMIT_REF_NAME
 
 before_script:
+  - apk add --no-cache docker docker-compose  # `dind` 없이 직접 실행 가능하도록 설정
   - docker info
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
 
