--- a/Frontend/Dockerfile.dev
+++ b/Frontend/Dockerfile.dev
@@ -5,7 +5,7 @@ FROM node:22.13.1
 WORKDIR /app
 
 # package.json과 package-lock.json을 먼저 복사
-COPY package*.json .
+COPY package*.json ./
 
 # # 의존성 설치
 RUN npm install
