--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -66,6 +66,8 @@ build_frontend:
 
 test:
   stage: test
+  tags:
+    - test
   script:
     - docker-compose -f docker-compose.yml run --rm backend bash -c "
         uvicorn main:app --host 0.0.0.0 --port 8000 --reload --proxy-headers --forwarded-allow-ips='*'
@@ -77,6 +79,8 @@ test:
 
 deploy:
   stage: deploy
+  tags:
+    - deploy
   script:
     - echo "$DEPLOY_SSH_PRIVATE_KEY" > I12B106T.pem
     - chmod 400 I12B106T.pem
