🧱 [JIRA-S12P11B106-168] Fix: 운영 branch에 제외되어야 하는 파일 세팅

--- a/.gitattributes
+++ b/.gitattributes
@@ -4,3 +4,11 @@ docker-compose.override.yml merge=ours
 Dockerfile.dev merge=ours
 *.log merge=ours
 config.local.json merge=ours
+
+Backend/Dockerfile.dev merge=ours
+Backend/tests/ merge=ours
+Frontend/Dockerfile.dev merge=ours
+Frontend/src/ merge=ours
+Frontend/public/ merge=ours
+docker-compose.override.yml merge=ours
+.env merge=ours
