--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -46,10 +46,16 @@ build_backend:
     - backend-runner
   script:
     - cd Backend
-    - docker build -t $IMAGE_BACKEND:$TAG -f Dockerfile.dev .
+    - |
+      if [[ "$TAG" == "develop" ]]; then
+        docker build -t $IMAGE_BACKEND:$TAG -f Dockerfile.dev .
+      else
+        docker build -t $IMAGE_BACKEND:$TAG -f Dockerfile.prod .
+      fi
     - docker push $IMAGE_BACKEND:$TAG
   only:
     - develop
+    - release
     - master
 
 build_frontend:
@@ -58,10 +64,16 @@ build_frontend:
     - frontend-runner
   script:
     - cd Frontend
-    - docker build -t $IMAGE_FRONTEND:$TAG -f Dockerfile.dev .
+    - |
+      if [[ "$TAG" == "develop" ]]; then
+        docker build -t $IMAGE_FRONTEND:$TAG -f Dockerfile.dev .
+      else
+        docker build -t $IMAGE_FRONTEND:$TAG -f Dockerfile.prod .
+      fi
     - docker push $IMAGE_FRONTEND:$TAG
   only:
     - develop
+    - release
     - master
 
 test:
