--- a/.dockerignore
+++ b/.dockerignore
@@ -1,6 +1,5 @@
 npm-debug.log
 node_modules
-build
 Dockerfile
 .git
 *.log
@@ -13,3 +12,8 @@ Dockerfile
 __pycache__/
 *.pyc
 *.pyo
+instance/
+
+yarn-error.log
+
+.vscode/
