🧱 [JIRA-S12P11B106-169] Featrue: docker-compose, Dockerfile 등 배포 환경에 맞게 수정

--- a/Backend/Dockerfile.prod
+++ b/Backend/Dockerfile.prod
@@ -10,4 +10,4 @@ COPY . /app
 
 WORKDIR /app
 
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--reload", "--proxy-headers", "--forwarded-allow-ips='*'"]
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--proxy-headers", "--forwarded-allow-ips='*'"]
