--- a/nginx/conf.d/app.conf
+++ b/nginx/conf.d/app.conf
@@ -38,20 +38,13 @@ server {
     ssl_session_cache shared:SSL:10m;
     ssl_session_timeout 10m;
 
-    root /app/Frontend/dist;
+    root /app/frontend_build/dist;
     index index.html;
     
     location / {
         try_files $uri $uri/ /index.html;
     }
-
-    # robots.txt 설정
-    location /robots.txt {
-        root /app/frontend/dist;
-        allow all;
-        log_not_found off;
-    }
-
+    
     location ~* \.(?:ico|css|js|gif|jpe?g|png|woff2?|eot|ttf|otf|svg|map|json)$ {
         expires max;
         log_not_found off;
