--- a/Frontend/Dockerfile.prod
+++ b/Frontend/Dockerfile.prod
@@ -1,5 +1,7 @@
-# frontend/Dockerfile
-FROM node:22.13.1
+# Multi-stage Build
+
+# Build
+FROM node:22.13.1 AS build
 
 # 작업 디렉토리 설정
 WORKDIR /app
@@ -12,7 +14,18 @@ RUN npm install
 
 # 나머지 애플리케이션 소스 코드 복사
 COPY . .
+ENV NODE_ENV=production
 
 # 컨테이너가 시작될 때 실행될 명령어 설정
 # CMD ["tail", "-f", "/dev/null"]
-CMD ["npm", "run", "build"]
+RUN npm run build
+
+RUN ls -la /app/dist || (echo "❌ build/ 폴더 없음! 빌드 실패" && exit 1)
+
+# 최종 컨테이너에서 `build/` 폴더만 유지
+FROM alpine AS final
+
+WORKDIR /app
+COPY --from=build /app/dist ./dist
+
+CMD ["sh", "-c", "echo 'Frontend container is ready. Use Nginx to serve the build folder.'"]
