--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,9 @@
 services:
   backend:
-    image: kwon0528/b106-backend:latest
+    image: kwon0528/b106-backend:release
     container_name: prod-backend
     environment:
       DATABASE_URL: "mysql+pymysql://$DB_USER:$DB_PASSWD@$DB_HOST:$DB_PORT/$DB_NAME?charset=utf8"
-      # DEBUG: True
     ports:
       - "8000:8000"
     networks:
@@ -12,8 +11,10 @@ services:
     restart: unless-stopped
 
   frontend:
-    image: kwon0528/b106-frontend:latest
+    image: kwon0528/b106-frontend:release
     container_name: prod-frontend
+    volumes:
+      - ./frontend_build:/app/build  # ✅ `build/` 폴더를 공유 볼륨으로 유지
     ports:
       - "5173:5173"
     networks:
@@ -24,6 +25,7 @@ services:
     container_name: nginx
     restart: unless-stopped
     volumes:
+      - ./frontend_build:/app/frontend_build
       - ./nginx/conf.d:/etc/nginx/conf.d
       - ./certbot/www:/var/www/certbot
       - ./certbot/conf:/etc/letsencrypt
