--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -13,7 +13,7 @@ asttokens==3.0.0
 attrs==25.1.0
 audioop-lts==0.2.1
 backoff==2.2.1
-bcrypt==4.2.1
+bcrypt==4.1.1
 beautifulsoup4==4.13.3
 blinker==1.9.0
 build==1.2.2.post1
@@ -210,4 +210,4 @@ wrapt==1.17.2
 yarl==1.18.3
 zipp==3.21.0
 zstandard==0.23.0
-
+alembic==1.14.1
