🧱 [JIRA-S12P11B106-169] Feature: build 파일을 사용하여 배포되도록 변경

--- a/Frontend/Dockerfile.prod
+++ b/Frontend/Dockerfile.prod
@@ -28,4 +28,7 @@ FROM alpine AS final
 WORKDIR /app
 COPY --from=build /app/dist ./dist
 
-CMD ["sh", "-c", "echo 'Frontend container is ready. Use Nginx to serve the build folder.'"]
+RUN mkdir frontend_build
+RUN ls -la /app/dist || (echo "❌ dist/ 폴더 없음! COPY 실패" && exit 1)
+
+CMD ["cp", "-r", "/app/dist", "/app/frontend_build"]
