--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -96,7 +96,7 @@ deploy:
   script:
     - echo "$DEPLOY_SSH_PRIVATE_KEY" > I12B106T.pem
     - chmod 400 I12B106T.pem
-    - ssh -i ~/.ssh/id_rsa ubuntu@i12b106.p.ssafy.io "echo '✅ SSH connection successful'"
+    - ssh -i I12B106T.pem ubuntu@i12b106.p.ssafy.io "echo '✅ SSH connection successful'"
     - ssh ubuntu@i12b106.p.ssafy.io << EOF
         set -e
         docker pull $IMAGE_BACKEND:$TAG || { echo "Backend pull failed! Rolling back..."; exit 1; }
