🧱 [JIRA-S12P11B106-169] Fix: pem 키가 제대로 쓰이지 않는 오류 수정

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -104,7 +104,7 @@ deploy:
 
   script:
     - |
-      ssh ubuntu@$SSH_HOST << EOF
+      ssh -i id_rsa ubuntu@$SSH_HOST << EOF
       set -e
       docker pull $IMAGE_BACKEND:$TAG || { echo "Backend pull failed! Rolling back..."; exit 1; }
       docker pull $IMAGE_FRONTEND:$TAG || { echo "Frontend pull failed! Rolling back..."; exit 1; }
