--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,10 +11,10 @@ services:
     restart: unless-stopped
 
   frontend:
-    build:
-      context: ./Frontend
-      dockerfile: Dockerfile.prod
-    # image: kwon0528/b106-frontend:release
+    # build:
+    #   context: ./Frontend
+    #   dockerfile: Dockerfile.prod
+    image: kwon0528/b106-frontend:release
     container_name: prod-frontend
     # command: cp -r /app/dist /app/frontend_build
     volumes:
