--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -22,6 +22,7 @@
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.7",
     "openvidu-browser": "^2.31.0",
+    "openvidu-node-client": "^2.31.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
