--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,24 +21,51 @@ before_script:
   - echo "DOCKER_USERNAME=$DOCKER_USERNAME" >> .env
   - echo "DOCKER_PASSWORD=$DOCKER_PASSWORD" >> .env
   - echo "DEPLOY_SSH_PRIVATE_KEY=$DEPLOY_SSH_PRIVATE_KEY" >> .env
+
+  - echo "DB_USER=$DB_USER" >> .env
+  - echo "DB_PASSWD=$DB_PASSWD" >> .env
+  - echo "DB_HOST=$DB_HOST" >> .env
+  - echo "DB_PORT=$DB_PORT" >> .env
+  - echo "DB_POOL_SIZE=$DB_POOL_SIZE" >> .env
+  - echo "DB_MAX_OVERFLOW=$DB_MAX_OVERFLOW" >> .env
+  - echo "DB_POOL_RECYCLE=$DB_POOL_RECYCLE" >> .env
+  - echo "DB_POOL_PRE_PING=$DB_POOL_PRE_PING" >> .env
+
+  - echo "TWILIO_ACCOUNT_SID=$TWILIO_ACCOUNT_SID" >> .env
   - echo "TWILIO_AUTH_TOKEN=$TWILIO_AUTH_TOKEN" >> .env
   - echo "TWILIO_VERIFY_SID=$TWILIO_VERIFY_SID" >> .env
+
   - echo "SECRET_KEY=$SECRET_KEY" >> .env
   - echo "ALGORITHM=$ALGORITHM" >> .env
   - echo "ACCESS_TOKEN_EXPIRE_MINUTES=$ACCESS_TOKEN_EXPIRE_MINUTES" >> .env
   - echo "REFRESH_TOKEN_EXPIRE_DAYS=$REFRESH_TOKEN_EXPIRE_DAYS" >> .env
+
   - echo "MAIL_USERNAME=$MAIL_USERNAME" >> .env
   - echo "MAIL_PASSWORD=$MAIL_PASSWORD" >> .env
   - echo "MAIL_FROM=$MAIL_FROM" >> .env
   - echo "MAIL_PORT=$MAIL_PORT" >> .env
   - echo "MAIL_SERVER=$MAIL_SERVER" >> .env
+
   - echo "GOOGLE_CLIENT_ID=$GOOGLE_CLIENT_ID" >> .env
   - echo "GOOGLE_CLIENT_SECRET=$GOOGLE_CLIENT_SECRET" >> .env
+
   - echo "KAKAO_CLIENT_ID=$KAKAO_CLIENT_ID" >> .env
   - echo "KAKAO_CLIENT_SECRET=$KAKAO_CLIENT_SECRET" >> .env
   - echo "KAKAO_REDIRECT_URI=$KAKAO_REDIRECT_URI" >> .env
   - echo "KAKAO_REST_API_KEY=$KAKAO_REST_API_KEY" >> .env
-  - echo "KAKAO_LOGOUT_REDIRECT_URI=$KAKAO_LOGOUT_REDIRECT_URI" >> .env
+
+  - echo "VITE_BACKEND_URL=$VITE_BACKEND_URL" >> .env
+  - echo "VITE_BACKEND_PROTOCOL=$VITE_BACKEND_PROTOCOL" >> .env
+  - echo "VITE_BACKEND_IP=$VITE_BACKEND_IP" >> .env
+  - echo "VITE_BACKEND_PORT=$VITE_BACKEND_PORT" >> .env
+
+  - echo "VITE_OPENVIDU_PROTOCOL=$VITE_OPENVIDU_PROTOCOL" >> .env
+  - echo "VITE_OPENVIDU_IP=$VITE_OPENVIDU_IP" >> .env
+  - echo "VITE_OPENVIDU_PORT=$VITE_OPENVIDU_PORT" >> .env
+  - echo "VITE_OPENVIDU_SERVER_SECRET=$VITE_OPENVIDU_SERVER_SECRET" >> .env
+
+  - echo "REDIS_HOST=$REDIS_HOST" >> .env
+  - echo "REDIS_PORT=$REDIS_PORT" >> .env
 
 build_backend:
   stage: build
@@ -122,7 +149,7 @@ deploy:
       echo "Starting new docker-compose services..."
       docker-compose -f docker-compose.yml up -d
       EOF
-      EOF
+
   only:
     - master
     - release
