--- a/Backend/Dockerfile.dev
+++ b/Backend/Dockerfile.dev
@@ -5,9 +5,11 @@ WORKDIR /app
 COPY requirements.txt /app
 
 RUN pip install --no-cache-dir -r requirements.txt
-# RUN pip install pytest pytest-asyncio httpx
 
 COPY . /app
+
+# 마이그레이션 스크립트에 실행 권한 부여
+RUN chmod +x /app/migrate.py
 
 WORKDIR /app
 
