🔨 [JIRA-S12P11B106-168] Fix: frontend에서 요청 보내는 주소 수정, docker-compose 마운트 경로 수정

--- a/nginx/conf.d/app.conf
+++ b/nginx/conf.d/app.conf
@@ -45,12 +45,12 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
-    # robots.txt 설정
-    location /robots.txt {
-        root /app/frontend/dist;
-        allow all;
-        log_not_found off;
-    }
+    # # robots.txt 설정
+    # location /robots.txt {
+    #     root /app/frontend/dist;
+    #     allow all;
+    #     log_not_found off;
+    # }
 
     location ~* \.(?:ico|css|js|gif|jpe?g|png|woff2?|eot|ttf|otf|svg|map|json)$ {
         expires max;
