--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -35,7 +35,7 @@ services:
     container_name: nginx
     restart: unless-stopped
     volumes:
-      - ./frontend:/app/frontend
+      - ./Frontend:/app/Frontend
       - ./nginx/conf.d:/etc/nginx/conf.d
       - ./certbot/www:/var/www/certbot
       - ./certbot/conf:/etc/letsencrypt
