🔨 [JIRA-S12P11B106-168] Fix :__pycache__ 가 pipeline 상으로 문제를 일으키는 문제 해결을 위해 cleanup 단계 추가

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,5 @@
 stages:
+  - cleanup
   - build
   - test
   - deploy
@@ -66,6 +67,17 @@ before_script:
 
   - echo "REDIS_HOST=$REDIS_HOST" >> .env
   - echo "REDIS_PORT=$REDIS_PORT" >> .env
+
+
+# 클린업 단계: 이전 빌드 산출물 제거
+cleanup:
+  stage: cleanup
+  script:
+    - echo "Cleaning workspace..."
+    - find . -type d -name "__pycache__" -exec rm -rf {} +
+  tags:
+    - backend-runner
+  when: always
 
 build_backend:
   stage: build
