🔨 [JIRA-S12P11B106-168] Fix : 디렉토리를 비우는 것으로 해결 시도도

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,8 @@ stages:
   - deploy
 
 variables:
+  GIT_STRATEGY: clone
+  GIT_CLEAN_FLAGS: "-ffdx"
   IMAGE_BACKEND: kwon0528/backend
   IMAGE_FRONTEND: kwon0528/frontend
   TAG: $CI_COMMIT_REF_NAME
@@ -69,16 +71,6 @@ before_script:
   - echo "REDIS_PORT=$REDIS_PORT" >> .env
 
 
-# 클린업 단계: 이전 빌드 산출물 제거
-cleanup:
-  stage: cleanup
-  script:
-    - echo "Cleaning workspace..."
-    - find . -type d -name "__pycache__" -exec rm -rf {} +
-  tags:
-    - backend-runner
-  when: always
-
 build_backend:
   stage: build
   tags:
@@ -120,9 +112,11 @@ test:
   tags:
     - test
   script:
+    - cd Backend && git clean -ffdx  # 백엔드 디렉토리 내 잔여파일 제거
     - docker-compose -f docker-compose.yml run --rm backend bash -c "
         uvicorn main:app --host 0.0.0.0 --port 8000 --reload --proxy-headers --forwarded-allow-ips='*'
       "
+    - cd ../Frontend && git clean -ffdx  # 프론트엔드 디렉토리 정리
     - docker-compose -f docker-compose.yml run --rm frontend npm run dev
     - docker-compose down
   only:
