🔨 [JIRA-S12P11B106-168] Fix : 오타 수정

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -115,4 +115,6 @@ deploy:
       echo "Starting new docker-compose services..."
       docker-compose -f docker-compose.yml up -d
       EOF
-  only
+  only:
+    - master
+    - release
