🔨 [JIRA-S12P11B106-168] Fix : test 시작이 아니라 build가 끝났을 때 캐시를 삭제하도록 변경

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -43,6 +43,9 @@ build_backend:
         docker build --build-arg UID=$(id -u) --build-arg GID=$(id -g) -t $IMAGE_BACKEND:$TAG -f Dockerfile.prod .
       fi
     - docker push $IMAGE_BACKEND:$TAG
+    - git clean -ffdx
+    - find . -type d -name "__pycache__" -exec chmod -R 777 {} \;
+    - find . -type d -name "__pycache__" -exec rm -rf {} +
   only:
     - develop
     - release
