🔨 [JIRA-S12P11B106-169] Fix : nginx location 경로 변경

--- a/nginx/conf.d/app.conf
+++ b/nginx/conf.d/app.conf
@@ -42,9 +42,9 @@ server {
     index index.html;
     
     location / {
-        try_files $uri $uri/ /index.html;
+        try_files $uri $uri/ =404;
     }
-    
+
     location ~* \.(?:ico|css|js|gif|jpe?g|png|woff2?|eot|ttf|otf|svg|map|json)$ {
         expires max;
         log_not_found off;
